[package]
name = "testinator"
version = "0.1.0"
authors = ["Sebastian Geisler <github@gnet.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.2"
futures = "0.3.12"
itertools = "0.10.0"
semver = { version = "0.11.0", features = [ "serde" ] }
serde = { version = "1.0.123", features = [ "derive" ] }
serde_json = "1.0.62"
structopt = "0.3.21"
tempdir = "0.3.7"
tokio = { version = "1.2.0", features = [ "full" ] }
tracing = "0.1.23"
tracing-subscriber = "0.2.15"